# vitohlyad

./: .gitignore  CMakeLists.txt  README.md
cdlg-fix/: CMakeLists.txt  cdlg-fix.c  exports.yml
data/app/NPXS10001/sce_sys/: PartyPlugin.rco  param.sfo
data/app/NPXS10001/sce_sys/livearea/contents/: template.xml
data/app/NPXS10003/: webbrowser_plugin.rco
data/app/NPXS10003/sce_sys/: param.sfo
data/app/NPXS10004/: photocam_plugin.rco
data/app/NPXS10004/sce_sys/: param.sfo
data/app/NPXS10006/: friend_plugin.rco
data/app/NPXS10006/sce_sys/: param.sfo
data/app/NPXS10008/: trophy_local_plugin.rco  trophy_network_plugin.rco  trophy_plugin.rco
data/app/NPXS10008/sce_sys/: param.sfo
data/app/NPXS10009/: musicbrowser_plugin.rco
data/app/NPXS10009/sce_sys/: param.sfo
data/app/NPXS10010/: videobrowser_plugin.rco  videoplayer_plugin.rco
data/app/NPXS10010/sce_sys/: param.sfo
data/app/NPXS10012/: remoteplay_plugin.rco
data/app/NPXS10012/sce_sys/: param.sfo
data/app/NPXS10013/: second_screen.rco
data/app/NPXS10013/resource/: remoteplay_plugin.rco
data/app/NPXS10013/sce_sys/: param.sfo
data/app/NPXS10014/: psn_mail_plugin.rco
data/app/NPXS10014/sce_sys/: param.sfo
data/app/NPXS10015/: accessibility_plugin.rco  bluetooth_settings_plugin.rco  console_info_plugin.rco  datetime_settings_plugin.rco  language_settings_plugin.rco  location_settings_plugin.rco  network_settings_plugin.rco  notification_settings_plugin.rco  peripherals_settings_plugin.rco  powersave_settings_plugin.rco  psn_settings_plugin.rco  reset_plugin.rco  security_settings_plugin.rco  sound_settings_plugin.rco  system_settings_main.rco  system_settings_plugin.rco  system_update_plugin.rco  telephony_settings_plugin.rco  theme_settings_plugin.rco  wifi_settings_plugin.rco
data/app/NPXS10015/sce_sys/: param.sfo
data/app/NPXS10016/sce_sys/: param.sfo
data/app/NPXS10018/sce_sys/: param.sfo
data/app/NPXS10021/: tel_reg_plugin.rco
data/app/NPXS10021/sce_sys/: param.sfo
data/app/NPXS10026/: account_bind_plugin.rco  host_select_plugin.rco  resource.rco
data/app/NPXS10026/sce_sys/: param.sfo
data/app/NPXS10027/: game_manual_plugin.rco
data/app/NPXS10027/sce_sys/: param.sfo
data/app/NPXS10040/sce_sys/: param.sfo
data/app/NPXS10041/sce_sys/: param.sfo
data/app/NPXS10042/sce_sys/: param.sfo
data/app/NPXS10043/sce_sys/: param.sfo
data/app/NPXS10044/sce_sys/: param.sfo
data/app/NPXS10045/sce_sys/: param.sfo
data/app/NPXS10060/sce_sys/: param.sfo
data/app/NPXS10063/: grpmsg_middleware.rco
data/app/NPXS10065/: grief_report_dialog_general_plugin.rco
data/app/NPXS10072/: email_edit_preview_plugin.rco  email_first_plugin.rco  email_plugin.rco  email_settings_plugin.rco  email_view_plugin.rco
data/app/NPXS10072/sce_sys/: param.sfo
data/app/NPXS10073/: email_bg_plugin.rco
data/app/NPXS10078/: comboplay_plugin.rco
data/app/NPXS10079/: dailychecker_bg.rco
data/app/NPXS10081/: psm_manual_plugin.rco
data/app/NPXS10085/: videoplayer_plugin.rco
data/app/NPXS10085/sce_sys/: param.sfo
data/app/NPXS10091/: calendar_plugin.rco
data/app/NPXS10091/sce_sys/: param.sfo
data/app/NPXS10092/: calendar_bg_plugin.rco
data/app/NPXS10093/sce_sys/: param.sfo
data/app/NPXS10094/: kids_app_plugin.rco
data/app/NPXS10094/sce_sys/: param.sfo
data/app/NPXS10095/: panorama_plugin.rco
data/app/NPXS10095/sce_sys/: param.sfo
data/app/NPXS10098/sce_sys/: param.sfo
data/vsh/common/: app_settings_plugin.rco  auth_plugin.rco  dbrecovery_plugin.rco
data/vsh/game/: gamecard_installer_plugin.rco  gamedata_plugin.rco
data/vsh/import_savedata/: import_savedata_plugin.rco
data/vsh/initialsetup/: firstboot_plugin.rco  initialsetup_plugin.rco
data/vsh/online_storage/: online_storage_plugin.rco
data/vsh/shell/: applauncher_plugin.rco  auth_reset_plugin.rco  builtin_service_info.rco  coldboot_plugin.rco  download_plugin.rco  idu_update_plugin.rco  ime_plugin.rco  impose_net_plugin.rco  impose_plugin.rco  indicator_plugin.rco  livearea_plugin.rco  location_plugin.rco  power_manage_plugin.rco  telephony_plugin.rco  topmenu_plugin.rco
data/vsh/shell/telephony/initial_check/: tel_initial_check_plugin.rco
extras/livearea/: template.xml
extras/scripts/: binary_to_header.sh  generate_data_h.sh
src/: data.h  main.c  pic0.png.h  psp2_msgbox.c  psp2_msgbox.h  sha1.c  sha1.h  utils.c  utils.h
(+4 files in other folders)
